# fleur-lang

./: .gitignore  CMakeLists.txt  LICENSE-THIRD-PARTY.txt  README.md
docs/: fleur-language-specification.md  m-language-specification.md
scripts/: build-linux-x64-debug.py  build-tests-win-x64.py  build-win-x64-debug.py  create-project-tree-structure.py  run-tests-win-x64.py
src/: common.hpp  main.cpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/util/: io.cpp  io.hpp  string.cpp  string.hpp
tests/: README.md
tests/tokenizer-01/src/: test.cpp
tests/tokenizer-02/src/: test.cpp
tests/tokenizer-03/: test.txt
tests/tokenizer-03/src/: test.cpp
tests/tokenizer-04/: CMakeLists.txt  test.txt
tests/tokenizer-04/src/: test.cpp
